--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@
 
 }
 
+.contentdiv{
+	width:100%;
+	display:flex;
+	flex-direction: column;
+	align-items:center;
+	
+}
 .video {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
