--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	border: 4px #d5e8f0;
 	border-radius: 0;
 	display:flex;
-	flex-direction:row;
+	flex-direction:column;
 	margin:0;
 	padding:10px;
 	justify-content: center;
