--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
 	border: 5px solid #FFFF00;
 	
 }
+.vid {
+	aspect-ratio: 16 / 9;
+	width: 85%;
+	height: 100%;
 .video {
 	display:flex;
 	flex-direction: column;
