--- a/style.css
+++ b/style.css
@@ -21,12 +21,7 @@
 	border: 5px solid #FFFF00;
 	
 }
-.vid {
-	position: relative;
-	aspect-ratio: 16 / 9;
-	width: 85%;
-	height: 100%;
-}
+
 .video {
 	display:flex;
 	flex-direction: column;
@@ -35,10 +30,9 @@
 	padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
 	}
 	iframe{
-	display: block;
-	margin-left: auto;
-    	margin-right: auto; 
-	position: absolute;
+	aspect-ratio: 16 / 9;
+	display:block;
+	margin: auto;
 	top: 0;
 	left: 0;
 	width: 85%;
