--- a/style.css
+++ b/style.css
@@ -22,22 +22,17 @@
 	
 }
 
-.video {
-	display:flex;
-	flex-direction: column;
-	align-items:center;
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
-	}
-	iframe{
-	aspect-ratio: 16 / 9;
-	display:block;
-	margin: auto;
-	top: 0;
-	left: 0;
-	width: 85%;
-	height: 100%;
-	
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .navigation{
