--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
+  width:85%
 }
 .videoWrapper iframe {
   position: absolute;
