--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
   width:85%
+  border: 5px solid #FFF400;
 }
 .videoWrapper iframe {
   position: absolute;
@@ -34,6 +35,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  border: 5px solid #FFFF05;
 }
 
 .navigation{
