--- a/style.css
+++ b/style.css
@@ -21,6 +21,21 @@
 	border: 5px solid #FFFF00;
 	
 }
+.vid {
+    width: $width;
+    height: calc(($width/16) * 9);
+    position: relative;
+}
+iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(+50%, -50%);
+    transform: translate(+50%, -50%);
+}
+
 
 .videoWrapper {
   position: relative;
