--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   overflow: hidden;
   width: 100%;
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  border: 5px solid #FFFF00;
 }
 
 /* Then style the iframe to fit in the container div with full height and width */
