--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 	display:flex;
 	flex-direction: column;
 	align-items:center;
-	flex-basis: 100%
+	flex-basis: 100%;
 	border: 5px solid #FFFF00;
 	
 }
