--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
   overflow: hidden;
   width: 100%;
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  text-align: center;
   border: 5px solid #FFFF00;
 }
 
