--- a/style.css
+++ b/style.css
@@ -37,6 +37,18 @@
 	padding:10px;
 	border:0;
 }
+.ediv{
+	width:80%
+	display:flex;
+	flex-direction: row;
+	align-items:center;
+	border: 5px solid #777777;
+}
+.e{
+	width:15%;
+	padding:5px;
+	border:0;
+}
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
