--- a/style.css
+++ b/style.css
@@ -78,7 +78,9 @@
 }
 .videoWrapper iframe {
   position: absolute;
-  width: 85%;
+  top: 0;
+  left: 10%;
+  width: 80%;
   height: 100%;
   margin:0 auto;
   border: 5px solid #FFFF05;
